Knockout: Fix panel after render event for detail panel in matrix

--- a/src/knockout/templates/question-matrixdynamic.html
+++ b/src/knockout/templates/question-matrixdynamic.html
@@ -132,7 +132,7 @@
         <td data-bind="css: $data.className, attr: { colspan: $data.colSpans }">
           <!-- ko component: { name: $data.panel.survey.getElementWrapperComponentName($data.panel), 
             params: { componentData:  $data.panel.survey.getElementWrapperComponentData($data.panel), 
-            templateData: { name: $data.panel.koElementType, data: $data.panel, afterRender: question.koElementAfterRender } } } 
+            templateData: { name: $data.panel.koElementType, data: $data.panel, afterRender: question.koPanelAfterRender } } } 
           -->
           <!-- /ko -->
         </td>
