Work for #6243 Survey margins - fix row top margin in Angular

--- a/src/defaultV2-theme/blocks/sd-row.scss
+++ b/src/defaultV2-theme/blocks/sd-row.scss
@@ -10,6 +10,10 @@
   margin-top: 0;
 }
 
+sv-ng-row:first-of-type+.sd-row:first-of-type {
+  margin-top: 0;
+}
+
 .sd-row.sd-page__row:not(:first-child) {
   margin-top: calcSize(2);
 
