--- a/src/defaultV2-theme/blocks/sd-row.scss
+++ b/src/defaultV2-theme/blocks/sd-row.scss
@@ -10,11 +10,7 @@
   margin-top: 0;
 }
 
-sv-ng-row:first-of-type+.sd-row:first-of-type {
-  margin-top: 0;
-}
-
-.sd-row.sd-page__row:not(:first-child) {
+.sd-page__title~.sd-row.sd-page__row {
   margin-top: calcSize(2);
 
   &.sd-row--compact {
