Work for #6243 Survey margins - fix row top margin

--- a/src/defaultV2-theme/blocks/sd-row.scss
+++ b/src/defaultV2-theme/blocks/sd-row.scss
@@ -6,13 +6,15 @@
   margin-top: var(--sd-base-vertical-padding);
 }
 
+.sd-row.sd-page__row {
+  margin-top: calcSize(2);
+}
+
 .sd-row:first-of-type {
   margin-top: 0;
 }
 
 .sd-page__title~.sd-row.sd-page__row {
-  margin-top: calcSize(2);
-
   &.sd-row--compact {
     margin-top: var(--sd-base-vertical-padding);
   }
