--- a/src/defaultV2-theme/blocks/sd-row.scss
+++ b/src/defaultV2-theme/blocks/sd-row.scss
@@ -15,6 +15,8 @@
 }
 
 .sd-page__title~.sd-row.sd-page__row {
+  margin-top: calcSize(2);
+
   &.sd-row--compact {
     margin-top: var(--sd-base-vertical-padding);
   }
