#6642 Matrix wrong paddings - simple cases

--- a/src/defaultV2-theme/blocks/sd-table.scss
+++ b/src/defaultV2-theme/blocks/sd-table.scss
@@ -1,8 +1,11 @@
 .sd-table {
   width: 100%;
   background: $question-background;
-  border-collapse: collapse;
+  border-collapse: separate;
   white-space: normal;
+  border-spacing: 0 16px;
+  margin: calcSize(-2) 0;
+  table-layout: fixed;
 }
 
 .sd-table--align-top {
@@ -11,11 +14,15 @@
   }
 }
 
+.sd-table--no-header {
+  padding-top: calcSize(3)
+}
 .sd-table--alternate-rows {
-  margin: 0 8px;
+  margin-left: calcSize(1);
+    margin-right: calcSize(1);
   width: calc(100% - 2 * #{$base-unit});
 
-  .sd-table__cell:first-of-type {
+    .sd-table__cell:not(.sd-table__cell--header):first-of-type {
     padding-left: calcSize(2);
   }
 
@@ -54,7 +61,7 @@
   font-weight: normal;
   font-size: $font-editorfont-size;
   line-height: multiply(1.5, $font-editorfont-size);
-  padding: calcSize(1);
+  padding: 0 calcSize(1);
   color: $foreground;
   text-align: center;
 }
@@ -111,7 +118,7 @@
 .sd-table__cell--header {
   font-weight: 600;
   vertical-align: top;
-  padding: calcSize(1.5) calcSize(1) calcSize(2.5);
+  padding: calcSize(1.5) calcSize(1);
 
   &:not(.sd-table__cell--empty) {
     min-width: calcSize(14);
@@ -189,7 +196,7 @@
   font-weight: 600;
   text-align: left;
   min-width: calcSize(12);
-  padding: calcSize(2.5) calcSize(1);
+  padding: calcSize(1.5) calcSize(1);
 }
 
 .sd-matrixdynamic__content .sd-table__question-wrapper {
@@ -275,7 +282,7 @@
   }
 
   &>.sd-question__content {
-    padding-top: calcSize(2.5);
+    padding-top: calcSize(2);
     min-width: min-content;
   }
 
