--- a/src/knockout/templates/question-file.html
+++ b/src/knockout/templates/question-file.html
@@ -11,10 +11,10 @@
           <span data-bind="css: question.cssClasses.dragAreaPlaceholder, text: question.dragAreaPlaceholder"></span>
           <div data-bind="css: question.cssClasses.wrapper">
             <!-- ko ifnot: isReadOnly -->
-            <label tabindex="0" role="button" data-bind="css: question.koChooseFileCss, key2click, attr: { for: question.inputId, 'aria-label': question.koChooseButtonText }">
-              <span data-bind="text: question.koChooseButtonText"></span>
+            <label tabindex="0" role="button" data-bind="css: question.koChooseFileCss, key2click, attr: { for: question.inputId, 'aria-label': question.koGetChooseButtonText() }">
+              <span data-bind="text: question.koGetChooseButtonText()"></span>
               <!-- ko if: question.cssClasses.chooseFileIconId -->
-                  <!-- ko component: { name: 'sv-svg-icon', params: { title: question.chooseButtonText, iconName: question.cssClasses.chooseFileIconId, size: 'auto' } } --><!-- /ko -->
+                  <!-- ko component: { name: 'sv-svg-icon', params: { title: question.koGetChooseButtonText(), iconName: question.cssClasses.chooseFileIconId, size: 'auto' } } --><!-- /ko -->
               <!-- /ko -->
             </label>
             <!-- /ko -->
