#6642 Matrix wrong paddings - update screenshots and fixed empty cells in errors Fixes #6642

--- a/src/defaultV2-theme/blocks/sd-table.scss
+++ b/src/defaultV2-theme/blocks/sd-table.scss
@@ -79,7 +79,7 @@
   padding: 0 calcSize(1);
   color: $foreground;
   text-align: center;
-  &:not(.sd-table__cell--empty):not(.sd-table__cell--actions) {
+  &:not(.sd-table__cell--empty):not(.sd-table__cell--actions):not(:empty) {
       min-width: calcSize(14);
     }
 }
