--- a/src/defaultV2-theme/blocks/sd-rating.scss
+++ b/src/defaultV2-theme/blocks/sd-rating.scss
@@ -40,7 +40,7 @@
 
 .sd-rating__item {
   position: relative;
-  background: $background;
+  background: $question-background;
   box-shadow: $shadow-small;
   border-radius: calcSize(12.5);
   white-space: nowrap;
