work for https://github.com/surveyjs/private-tasks/issues/258

--- a/src/knockout/components/tagbox/tagbox.html
+++ b/src/knockout/components/tagbox/tagbox.html
@@ -70,7 +70,7 @@
   <!-- /ko -->
   <!-- ko if: question.cssClasses.chevronButtonIconId -->
   <div data-bind="css: question.cssClasses.chevronButton">
-    <!-- ko component: { name: 'sv-svg-icon', params: { css: question.cssClasses.chevronButtonSvg, iconName: question.cssClasses.chevronButtonIconId, size: '24' } } -->
+    <!-- ko component: { name: 'sv-svg-icon', params: { css: question.cssClasses.chevronButtonSvg, iconName: question.cssClasses.chevronButtonIconId, size: 'auto' } } -->
     <!-- /ko -->
   </div>
   <!-- /ko -->
