--- a/src/defaultV2-theme/blocks/sd-dropdown.scss
+++ b/src/defaultV2-theme/blocks/sd-dropdown.scss
@@ -70,9 +70,10 @@
   padding-inline-end: calcSize(0.5);
 }
 
+.sd-dropdown_chevron-button-svg,
 .sd-dropdown_clean-button-svg {
-  width: calcSize(3);
-  height: calcSize(3);
+  width: multiply(1.5, $font-editorfont-size);
+  height: multiply(1.5, $font-editorfont-size);
 }
 
 .sd-input.sd-dropdown:focus-within {
