fix angular & tagbox clear button

--- a/packages/survey-angular-ui/src/components/tagbox/tagbox.component.html
+++ b/packages/survey-angular-ui/src/components/tagbox/tagbox.component.html
@@ -27,6 +27,6 @@
         <div>{{ model.readOnlyText }}</div>
     </div>
     <div *ngIf="model.cssClasses.chevronButtonIconId" [class]="model.cssClasses.chevronButton">
-        <svg [iconName]="model.cssClasses.chevronButtonIconId" [partCss]="model.cssClasses.chevronButtonSvg" [size]="auto" sv-ng-svg-icon></svg>
+        <svg [iconName]="model.cssClasses.chevronButtonIconId" [partCss]="model.cssClasses.chevronButtonSvg" [size]="'auto'" sv-ng-svg-icon></svg>
     </div>
 </div>
