--- a/src/defaultV2-theme/blocks/sd-dropdown.scss
+++ b/src/defaultV2-theme/blocks/sd-dropdown.scss
@@ -54,6 +54,8 @@
 
 .sd-dropdown_clean-button {
   display: flex;
+  justify-content: center;
+  align-items: center;
   padding: 0 calcSize(1);
   margin: auto 0;
 }
