--- a/src/defaultV2-theme/blocks/sd-table.scss
+++ b/src/defaultV2-theme/blocks/sd-table.scss
@@ -103,8 +103,8 @@
 
 .sd-table__cell--header {
   span {
-    font-size: calcFontSize(1);
-    line-height: calcFontSize(1.5);
+    font-size: $font-editorfont-size;
+    line-height: multiply(1.5, $font-editorfont-size);
   }
 }
 
