--- a/packages/survey-angular-ui/src/components/renderAs/dropdown-select/dropdown-select.component.html
+++ b/packages/survey-angular-ui/src/components/renderAs/dropdown-select/dropdown-select.component.html
@@ -10,7 +10,7 @@
     </select>
     <div *ngIf="model.isReadOnly" disabled [class]="model.getControlClass()" [attr.id]="model.inputId">{{ model.readOnlyText }}</div>
     <div *ngIf="model.cssClasses.chevronButtonIconId" [class]="model.cssClasses.chevronButton">
-      <svg [iconName]="model.cssClasses.chevronButtonIconId" [partCss]="model.cssClasses.chevronButtonSvg" [size]="24" sv-ng-svg-icon></svg>
+      <svg [iconName]="model.cssClasses.chevronButtonIconId" [partCss]="model.cssClasses.chevronButtonSvg" [size]="'auto'" sv-ng-svg-icon></svg>
     </div>
   </div>
   <div *ngIf="model.isOtherSelected" [class]="model.getCommentAreaCss(true)"
