--- a/src/defaultV2-theme/blocks/sd-dropdown.scss
+++ b/src/defaultV2-theme/blocks/sd-dropdown.scss
@@ -54,6 +54,8 @@
 
 .sd-dropdown_clean-button {
   display: flex;
+  justify-content: center;
+  align-items: center;
   padding: 0 calcSize(1);
   margin: auto 0;
 }
@@ -70,9 +72,10 @@
   padding-inline-end: calcSize(0.5);
 }
 
+.sd-dropdown_chevron-button-svg,
 .sd-dropdown_clean-button-svg {
-  width: calcSize(3);
-  height: calcSize(3);
+  width: multiply(1.5, $font-editorfont-size);
+  height: multiply(1.5, $font-editorfont-size);
 }
 
 .sd-input.sd-dropdown:focus-within {
