#6700 Matrix column widths' issue (safari only) Fixes #6700

--- a/src/defaultV2-theme/blocks/sd-table.scss
+++ b/src/defaultV2-theme/blocks/sd-table.scss
@@ -179,7 +179,7 @@
 }
 
 .sd-table__cell--actions:not(.sd-table__cell--vertical) {
-  width: 0;
+  width: calcSize(1);
   &:not(.sd-table__cell--drag):first-of-type {
       padding-left: 0;
     }
