fix inner popup for https://github.com/surveyjs/survey-creator/issues/4409

--- a/src/defaultV2-theme/defaultV2.fontless.scss
+++ b/src/defaultV2-theme/defaultV2.fontless.scss
@@ -131,6 +131,7 @@ body {
   }
 }
 
+.sv-popup.sv-popup--dropdown.sv-single-select-list,
 .sv-popup.sv-popup--dropdown {
   .sv-popup__shadow {
     box-shadow: $shadow-medium;
@@ -139,6 +140,7 @@ body {
   .sv-popup__body-content {
     background-color: $background;
     padding: calcSize(1) 0;
+    height: 100%;
   }
 }
 
