--- a/src/defaultV2-theme/defaultV2.fontless.scss
+++ b/src/defaultV2-theme/defaultV2.fontless.scss
@@ -131,8 +131,7 @@ body {
   }
 }
 
-.sv-popup.sv-popup--dropdown.sv-single-select-list,
-.sv-popup.sv-popup--dropdown {
+.sv-popup.sv-popup--dropdown.sv-popup--dropdown {
   .sv-popup__shadow {
     box-shadow: $shadow-medium;
   }
