--- a/src/knockout/components/dropdown/dropdown.html
+++ b/src/knockout/components/dropdown/dropdown.html
@@ -1,4 +1,4 @@
-<div data-bind="css: question.cssClasses.selectWrapper, click: click">
+<div data-bind="css: question.cssClasses.selectWrapper, event: { pointerdown: click }">
   <!-- ko ifnot: question.isReadOnly -->
   <div data-bind="css: question.getControlClass(),
     event: { keydown: keyhandler, blur: blur },
