#6717 top padding (matrix in the panel + no column headers) Fixes #6717

--- a/src/defaultV2-theme/blocks/sd-panel.scss
+++ b/src/defaultV2-theme/blocks/sd-panel.scss
@@ -60,5 +60,5 @@
 }
 
 .sd-panel__content {
-  padding-top: var(--sd-base-vertical-padding);
+  padding-top: calc(1.2 * var(--sd-base-vertical-padding));
 }
