--- a/src/defaultV2-theme/blocks/sd-table.scss
+++ b/src/defaultV2-theme/blocks/sd-table.scss
@@ -32,6 +32,37 @@
 .sd-table--no-header {
   padding-top: calcSize(3)
 }
+
+.sd-panel__content {
+  .sd-table--no-header {
+    padding-top: 0;
+  }
+
+  .sd-question--table {
+    .sd-question__content {
+      padding-top: calcSize(0);
+    }
+
+    &>.sd-question__header {
+      &+.sd-question__content {
+        padding-top: calcSize(2);
+
+        .sd-table--no-header {
+          padding-top: calcSize(3);
+        }
+      }
+    }
+  }
+
+  .sd-question--table {
+    &:not(.sd-element--with-frame) {
+      padding-top: calcSize(0.25);
+      margin-top: calcSize(-0.25);
+      padding-bottom: calcSize(0.25);
+      margin-bottom: calcSize(-0.25);
+    }
+  }
+}
 .sd-table--alternate-rows {
   margin-left: calcSize(1);
     margin-right: calcSize(1);
