--- a/src/defaultV2-theme/blocks/sd-table.scss
+++ b/src/defaultV2-theme/blocks/sd-table.scss
@@ -56,11 +56,26 @@
 
   .sd-question--table {
     &:not(.sd-element--with-frame) {
-      padding-top: calcSize(0.25);
-      margin-top: calcSize(-0.25);
+      padding-top: calcSize(3);
+        margin-top: calcSize(-3);
       padding-bottom: calcSize(0.25);
       margin-bottom: calcSize(-0.25);
     }
+  }
+  .sd-question--table>.sd-question__content>.sd-table-wrapper .sd-table:not(.sd-table--no-header) {
+    margin-top: calcSize(-3);
+  }
+
+  &>.sd-row:not(:first-child) .sd-question--table>.sd-question__content>.sd-table-wrapper .sd-table:not(.sd-table--no-header) {
+    margin-top: calcSize(-2);
+  }
+
+  .sd-question--table>.sd-question__header+.sd-question__content>.sd-table-wrapper .sd-table:not(.sd-table--no-header) {
+    margin-top: calcSize(0);
+  }
+
+  &>.sd-row:not(:first-child) .sd-question--table>.sd-question__header+.sd-question__content>.sd-table-wrapper .sd-table:not(.sd-table--no-header) {
+    margin-top: calcSize(0);
   }
 }
 .sd-table--alternate-rows {
