--- a/packages/survey-angular-ui/src/questions/signature.component.html
+++ b/packages/survey-angular-ui/src/questions/signature.component.html
@@ -1,11 +1,10 @@
 <div
 [class]="model.cssClasses.root"
 [style.height]="model.signatureHeight + 'px'" [style.width]="model.signatureWidth + 'px'" #contentElement>
-<div [class]="model.cssClasses.placeholder" [visible]="model.needShowPlaceholder()">
-  {{ model.placeHolderText }}
-</div>
+<div [class]="model.cssClasses.placeholder" [visible]="model.needShowPlaceholder()">{{ model.placeHolderText }}</div>
 <div>
-  <canvas tabindex="0"></canvas>
+  <img *ngIf="!!model.backgroundImage" [src]="model.backgroundImage" [width]="model.signatureWidth" [height]="model.signatureHeight" [class]="model.cssClasses.backgroundImage">
+  <canvas tabindex="0" [class]="model.cssClasses.canvas"></canvas>
 </div>
 <div [class]="model.cssClasses.controls" [visible]="model.canShowClearButton">
   <button
