--- a/src/defaultV2-theme/blocks/sd-signaturepad.scss
+++ b/src/defaultV2-theme/blocks/sd-signaturepad.scss
@@ -23,4 +23,11 @@
     .sjs_sp_placeholder {
         background-color: $red-light;
     }
-} 
+}
+
+.sd-signaturepad__canvas,
+.sd-signaturepad__background-image {
+    position: absolute;
+    top: 0;
+    left: 0;
+}
