--- a/src/signaturepad.scss
+++ b/src/signaturepad.scss
@@ -19,9 +19,16 @@
     justify-content: center;
 
     position: absolute;
-    z-index: 0;
+    z-index: 1;
     user-select: none;
     pointer-events: none;
     width: 100%;
     height: 100%;
+}
+
+.sjs_sp_canvas,
+.sjs_sp__background-image {
+    position: absolute;
+    top: 0;
+    left: 0;
 }
