--- a/src/defaultV2-theme/blocks/sd-table.scss
+++ b/src/defaultV2-theme/blocks/sd-table.scss
@@ -220,6 +220,7 @@
   font-weight: 600;
   text-align: left;
   min-width: calcSize(12);
+  padding: calcSize(1.5) calcSize(1);
 }
 
 .sd-matrixdynamic__content .sd-table__question-wrapper {
