#6749 Incorrect expand-collapse cell width in Matrix Dropdown Detailed Fixes #6749

--- a/src/defaultV2-theme/blocks/sd-table.scss
+++ b/src/defaultV2-theme/blocks/sd-table.scss
@@ -149,6 +149,10 @@
   width: calcSize(14);
 }
 
+.sd-matrixdropdown .sd-table__cell--header.sd-table__cell--action {
+  min-width: calcSize(2);
+  width: calcSize(2);
+}
 .sd-matrixdropdown .sd-table__cell--header:not(.sd-table__cell--empty) {
   min-width: calcSize(14);
   width: calcSize(14);
