add placeholder color variable - https://github.com/surveyjs/private-tasks/issues/262

--- a/src/defaultV2-theme/blocks/sd-input.scss
+++ b/src/defaultV2-theme/blocks/sd-input.scss
@@ -31,7 +31,7 @@
 }
 
 .sd-input::placeholder {
-  color: $foreground-light;
+  color: $font-editorfont-placeholdercolor;
   -webkit-user-select: none;
   -moz-user-select: none;
   -ms-user-select: none;
