--- a/src/defaultV2-theme/blocks/sd-dropdown.scss
+++ b/src/defaultV2-theme/blocks/sd-dropdown.scss
@@ -112,7 +112,7 @@
 }
 
 .sd-dropdown--empty:not(.sd-input--disabled) .sd-dropdown__filter-string-input::placeholder {
-  color: $foreground-light;
+  color: $font-editorfont-placeholdercolor;
 }
 
 .sd-dropdown__filter-string-input::placeholder {
@@ -127,7 +127,7 @@
 }
 
 .sd-dropdown__hint-prefix {
-  color: $foreground-light;
+  color: $font-editorfont-placeholdercolor;
 
   span {
     white-space: pre;
@@ -136,7 +136,7 @@
 
 .sd-dropdown__hint-suffix {
   display: flex;
-  color: $foreground-light;
+  color: $font-editorfont-placeholdercolor;
 
   span {
     white-space: pre;
