#6767 Matrix Rubric with Odd/Even Rows doesn't highlight selected cells in gray (odd) rows Fixes #6767

--- a/src/defaultV2-theme/blocks/sd-table.scss
+++ b/src/defaultV2-theme/blocks/sd-table.scss
@@ -51,6 +51,10 @@
     td:first-of-type {
       background-color: $background-dim-light;
 
+      &.sd-matrix__text--checked {
+          background-color: $primary-light;
+      }
+
       .sd-input {
         background-color: $primary-foreground;
       }
