File Question - Irrelevant message is displayed within a drop area placeholder for read-only mode fix #6652

--- a/packages/survey-angular-ui/src/questions/file.component.html
+++ b/packages/survey-angular-ui/src/questions/file.component.html
@@ -33,7 +33,7 @@
     <div
       [class]="model.getFileDecoratorCss()"
     >
-      <span [class]="model.cssClasses.dragAreaPlaceholder">{{ model.dragAreaPlaceholder }}</span>
+      <span [class]="model.cssClasses.dragAreaPlaceholder">{{ model.renderedPlaceholder }}</span>
       <div [class]="model.cssClasses.wrapper">
         <label
           *ngIf="!model.isReadOnly"
