Color for placeholder text for File question Fixed https://github.com/surveyjs/private-tasks/issues/270

--- a/src/defaultV2-theme/blocks/sd-question.scss
+++ b/src/defaultV2-theme/blocks/sd-question.scss
@@ -163,7 +163,7 @@
   min-height: calcSize(24);
   font-size: $font-editorfont-size;
   line-height: multiply(1.5, $font-editorfont-size);
-  color: $foreground-light;
+  color: $font-questionplaceholder-color;
 
   &>div,
   &>span {
