--- a/src/defaultV2-theme/blocks/sd-file.scss
+++ b/src/defaultV2-theme/blocks/sd-file.scss
@@ -61,7 +61,7 @@
   text-align: center;
   word-break: break-word;
   white-space: normal;
-  color: $foreground-light;
+  color: $font-questionplaceholder-color;
   font-size: $font-editorfont-size;
   line-height: multiply(1.5, $font-editorfont-size);
 }
