--- a/src/defaultV2-theme/blocks/sd-signaturepad.scss
+++ b/src/defaultV2-theme/blocks/sd-signaturepad.scss
@@ -1,5 +1,5 @@
 .sjs_sp_placeholder {
-    color: $foreground-light;
+    color: $font-questionplaceholder-color;
     font-size: $font-editorfont-size;
     line-height: multiply(1.5, $font-editorfont-size);
 }
