--- a/src/defaultV2-theme/blocks/sd-element.scss
+++ b/src/defaultV2-theme/blocks/sd-element.scss
@@ -201,6 +201,10 @@
     }
   }
 
+  &>.sd-element__header--location-top {
+    margin-top: 0;
+  }
+
   &.sd-element--with-frame {
     padding-top: 0;
     padding-bottom: 0;
@@ -209,10 +213,6 @@
       padding-top: calcSize(2);
       padding-bottom: calcSize(2);
       border-radius: $panel-corner-radius;
-    }
-
-    &>.sd-element__header--location-top {
-      margin-top: 0;
     }
   }
 
@@ -233,6 +233,17 @@
     &>.sd-element__header--location-top {
       &:after {
         bottom: calc(-0.5 * var(--sd-base-vertical-padding));
+      }
+    }
+  }
+
+  &.sd-question--table:not(.sd-element--collapsed) {
+    &.sd-question--top {
+      margin-top: calcSize(-1);
+
+      &>.sd-question__erbox--above-question {
+        margin-top: calcSize(1);
+        margin-bottom: var(--sd-base-vertical-padding);
       }
     }
   }
@@ -301,4 +312,3 @@
   box-shadow: none;
   background-color: transparent;
 }
-
