--- a/src/defaultV2-theme/blocks/sd-rating.scss
+++ b/src/defaultV2-theme/blocks/sd-rating.scss
@@ -357,4 +357,5 @@ legend+sv-ng-rating-item+.sd-rating__item-smiley {
 
 .sd-rating__item--selected .sd-rating__item-text.sd-rating__item-text {
   color: $primary-foreground;
+  font-weight: inherit;
 }
