--- a/src/defaultV2-theme/blocks/sd-context-btn.scss
+++ b/src/defaultV2-theme/blocks/sd-context-btn.scss
@@ -6,8 +6,8 @@
   outline: none;
   svg {
     display: block;
-    width: calcSize(3);
-    height: calcSize(3);
+    width: multiply(1.5, $font-editorfont-size);
+    height: multiply(1.5, $font-editorfont-size);
   }
   use {
     fill: $foreground-light;
