Matrix with detail - no headers, icons cut Fixes #6782

--- a/src/defaultV2-theme/blocks/sd-table.scss
+++ b/src/defaultV2-theme/blocks/sd-table.scss
@@ -190,6 +190,8 @@
   width: calcSize(1);
   &:not(.sd-table__cell--drag):first-of-type {
       padding-left: 0;
+      width: calcSize(5);
+      min-width: calcSize(5);
     }
 }
 
