Signature Pad. Add ability to use background image (#6744)
* work for #4403 Signature Pad. Add ability to use background image

* Describe backgroundImage and fix backgroundColor and penColor descriptions

* work for #4403 backgroundImage is priopity over backgroundColor

* work for #4403 : fix markup tests for vue3

* work for #4403 : fix style and add into general group

---------

Co-authored-by: OlgaLarina <olga.larina.dev@gmail.com>
Co-authored-by: Roman Tsukanov <roman.tsukanov@devexpress.com>

--- a/src/defaultV2-theme/blocks/sd-signaturepad.scss
+++ b/src/defaultV2-theme/blocks/sd-signaturepad.scss
@@ -23,4 +23,12 @@
     .sjs_sp_placeholder {
         background-color: $red-light;
     }
-} 
+}
+
+.sd-signaturepad__canvas,
+.sd-signaturepad__background-image {
+    position: absolute;
+    top: 0;
+    left: 0;
+    object-fit: cover;
+}
