work for https://github.com/surveyjs/private-tasks/issues/266

--- a/src/defaultV2-theme/blocks/sd-dropdown.scss
+++ b/src/defaultV2-theme/blocks/sd-dropdown.scss
@@ -143,6 +143,13 @@
   }
 }
 
+.sv-popup.sv-popup--dropdown.sv-popup--dropdown {
+  .sd-list__item-body {
+    line-height: multiply(1.5, $font-editorfont-size);
+    font-size: $font-editorfont-size;
+  }
+}
+
 [dir="rtl"],
 [style*="direction:rtl"],
 [style*="direction: rtl"] {
