--- a/src/defaultV2-theme/blocks/sd-paneldynamic.scss
+++ b/src/defaultV2-theme/blocks/sd-paneldynamic.scss
@@ -188,7 +188,7 @@
     font-family: var(--font-family, $font-family);
     font-size: $font-editorfont-size;
     line-height: multiply(1.5, $font-editorfont-size);
-    color: $foreground-light;
+    color: $font-questiondescription-color;
     overflow-x: hidden;
     white-space: nowrap;
 
@@ -198,7 +198,7 @@
 }
 
 .sd-tab-item.sd-tab-item--pressed {
-    color: $foreground;
+    color: $font-questiontitle-color;
     box-shadow: inset 0px -2px 0px $primary;
 }
 
