--- a/src/defaultV2-theme/blocks/sd-tagbox.scss
+++ b/src/defaultV2-theme/blocks/sd-tagbox.scss
@@ -57,7 +57,7 @@
 }
 
 .sd-tagbox-item_clean-button-svg {
-  display: flex;
+  display: block;
   padding: calcSize(0.5);
   width: calcSize(2);
   height: calcSize(2);
