--- a/packages/survey-angular-ui/src/questions/matrixcell.component.html
+++ b/packages/survey-angular-ui/src/questions/matrixcell.component.html
@@ -1,6 +1,6 @@
 <ng-template #template>
   <td [class]="cell.className" [attr.data-responsive-title]="getHeaders()" [title]="cell.getTitle()"
-    [style]="getCellStyle()" [attr.colspan]="cell.colSpans" #cellContainer>
+    [style]="getCellStyle()" [attr.colspan]="cell.colSpans" (focusin)="cell.focusIn()" #cellContainer>
     <sv-ng-matrix-drag-drop-icon *ngIf="cell.isDragHandlerCell"
       [model]="$any({ data: { row: row, question: question } })"></sv-ng-matrix-drag-drop-icon>
     <sv-action-bar *ngIf="cell.isActionsCell" [model]="cell.item.getData()" [handleClick]="false"></sv-action-bar>
