--- a/src/knockout/templates/question-multipletext.html
+++ b/src/knockout/templates/question-multipletext.html
@@ -7,7 +7,7 @@
               <span data-bind="css: question.koItemTitleCss">
                 <!-- ko component: { name: 'survey-element-title-content', params: {element: item.editor} } --><!-- /ko -->
               </span>
-              <div data-bind="css: question.koItemCss">
+              <div data-bind="css: question.koItemCss, event: {focusin: item.focusIn }">
                 <!-- ko if: item.editor.showErrorOnTop -->
                   <!-- ko template: { name: 'survey-question-errors', data: item.editor } -->
                   <!-- /ko -->
