--- a/src/defaultV2-theme/blocks/sd-completedpage.scss
+++ b/src/defaultV2-theme/blocks/sd-completedpage.scss
@@ -5,8 +5,35 @@
   text-align: center;
   height: auto;
 
+  // h3 {
+  //   font-size: calcFontSize(1.5);
+  // }
+
+  h1 {
+    @include articleXXLargeFont;
+  }
+
+  h2 {
+    @include articleXLargeFont;
+  }
+
   h3 {
-    font-size: calcFontSize(1.5);
+    @include articleLargeFont;
+  }
+
+  h4 {
+    @include articleMediumFont;
+  }
+
+  h5,
+  h6 {
+    color: $foreground;
+  }
+
+  span,
+  div,
+  p {
+    @include articleDefaultFont;
   }
 }
 
