--- a/src/defaultV2-theme/blocks/sd-html.scss
+++ b/src/defaultV2-theme/blocks/sd-html.scss
@@ -1,3 +1,32 @@
 .sd-html {
   white-space: initial;
 }
+
+.sd-html {
+  h1 {
+    @include articleXXLargeFont;
+  }
+
+  h2 {
+    @include articleXLargeFont;
+  }
+
+  h3 {
+    @include articleLargeFont;
+  }
+
+  h4 {
+    @include articleMediumFont;
+  }
+
+  h5,
+  h6 {
+    color: $foreground;
+  }
+
+  span,
+  div,
+  p {
+    @include articleDefaultFont;
+  }
+}
