work for #6673 update article settings

--- a/src/defaultV2-theme/variables.scss
+++ b/src/defaultV2-theme/variables.scss
@@ -161,7 +161,7 @@ $base-unit: var(--sjs-base-unit, var(--base-unit, 8px));
   color: $foreground;
   font-size: var(--sjs-article-font-xx-large-fontSize, 64px);
   text-decoration: var(--sjs-article-font-xx-large-textDecoration, "none");
-  font-family: var(--sjs-article-font-xx-large-fontFamily, var(--font-family, "Lato"));
+  font-family: $font-family;
   font-weight: var(--sjs-article-font-xx-large-fontWeight, 700);
   font-style: var(--sjs-article-font-xx-large-fontStyle, "normal");
   font-stretch: var(--sjs-article-font-xx-large-fontStretch, "normal");
@@ -175,7 +175,7 @@ $base-unit: var(--sjs-base-unit, var(--base-unit, 8px));
   color: $foreground;
   font-size: var(--sjs-article-font-x-large-fontSize, 48px);
   text-decoration: var(--sjs-article-font-x-large-textDecoration, "none");
-  font-family: var(--sjs-article-font-x-large-fontFamily, var(--font-family, "Lato"));
+  font-family: $font-family;
   font-weight: var(--sjs-article-font-x-large-fontWeight, 700);
   font-style: var(--sjs-article-font-x-large-fontStyle, "normal");
   font-stretch: var(--sjs-article-font-x-large-fontStretch, "normal");
@@ -189,7 +189,7 @@ $base-unit: var(--sjs-base-unit, var(--base-unit, 8px));
   color: $foreground;
   font-size: var(--sjs-article-font-large-fontSize, 32px);
   text-decoration: var(--sjs-article-font-large-textDecoration, "none");
-  font-family: var(--sjs-article-font-large-fontFamily, var(--font-family, "Lato"));
+  font-family: $font-family;
   font-weight: var(--sjs-article-font-large-fontWeight, 700);
   font-style: var(--sjs-article-font-large-fontStyle, "normal");
   font-stretch: var(--sjs-article-font-large-fontStretch, "normal");
@@ -203,7 +203,7 @@ $base-unit: var(--sjs-base-unit, var(--base-unit, 8px));
   color: $foreground;
   font-size: var(--sjs-article-font-medium-fontSize, 24px);
   text-decoration: var(--sjs-article-font-medium-textDecoration, "none");
-  font-family: var(--sjs-article-font-medium-fontFamily, var(--font-family, "Lato"));
+  font-family: $font-family;
   font-weight: var(--sjs-article-font-medium-fontWeight, 700);
   font-style: var(--sjs-article-font-medium-fontStyle, "normal");
   font-stretch: var(--sjs-article-font-medium-fontStretch, "normal");
@@ -217,7 +217,7 @@ $base-unit: var(--sjs-base-unit, var(--base-unit, 8px));
   color: $foreground;
   font-size: var(--sjs-article-font-default-fontSize, 16px);
   text-decoration: var(--sjs-article-font-default-textDecoration, "none");
-  font-family: var(--sjs-article-font-default-fontFamily, var(--font-family, "Lato"));
+  font-family: $font-family;
   font-weight: var(--sjs-article-font-default-fontWeight, 400);
   font-style: var(--sjs-article-font-default-fontStyle, "normal");
   font-stretch: var(--sjs-article-font-default-fontStretch, "normal");
