--- a/src/defaultV2-theme/blocks/sd-table.scss
+++ b/src/defaultV2-theme/blocks/sd-table.scss
@@ -88,7 +88,7 @@
   text-align: center;
 
   &:not(.sd-table__cell--empty):not(.sd-table__cell--actions):not(:empty) {
-    min-width: calcSize(14);
+    min-width: calcSize(16);
   }
 }
 
@@ -148,12 +148,12 @@
   padding: calcSize(1.5) calcSize(1);
 
   &:not(.sd-table__cell--empty) {
-    min-width: calcSize(14);
+    min-width: calcSize(16);
   }
 }
 
 .sd-matrixdropdown .sd-table__cell--header.sd-table__cell--empty {
-  min-width: calcSize(14);
+  min-width: calcSize(16);
 }
 
 .sd-matrixdropdown .sd-table__cell--header.sd-table__cell--action {
@@ -162,7 +162,7 @@
 }
 
 .sd-matrixdropdown .sd-table__cell--header:not(.sd-table__cell--empty) {
-  min-width: calcSize(14);
+  min-width: calcSize(16);
 
   &.sd-table__cell--dropdown,
   &.sd-table__cell--rating {
@@ -356,7 +356,7 @@
 }
 
 .sd-matrixdropdown.sd-table {
-  table-layout: fixed;
+  //table-layout: fixed;
 }
 
 @mixin table_responsive {
