Change design for questions in one row Fixes #6799

--- a/src/defaultV2-theme/blocks/sd-row.scss
+++ b/src/defaultV2-theme/blocks/sd-row.scss
@@ -4,6 +4,11 @@
   width: 100%;
   box-sizing: border-box;
   margin-top: var(--sd-base-vertical-padding);
+  gap: calcSize(2);
+}
+
+.sd-panel__content > .sd-row {
+  gap: calcSize(4);
 }
 
 .sd-row.sd-page__row {
