#6799 - fixed compact mode

--- a/src/defaultV2-theme/blocks/sd-row.scss
+++ b/src/defaultV2-theme/blocks/sd-row.scss
@@ -32,7 +32,7 @@
   width: calc(100% + var(--sd-base-padding));
   flex-wrap: wrap;
 
-  >div {
+  &>div {
     box-sizing: border-box;
     padding-left: calcSize(2);
   }
@@ -46,6 +46,11 @@
   }
 }
 
+.sd-row--multiple.sd-row--compact {
+  &>div {
+    padding-left: var(--sd-base-padding);
+  }
+}
 .sd-page__row.sd-row--multiple {
   margin-left: calcSize(-2);
   width: calc(100% + 2 * var(--sjs-base-unit, var(--base-unit, 8px)));
@@ -53,6 +58,8 @@
 
   &.sd-row--compact {
     padding: 0;
+    margin-left: calc(-1 * var(--sd-base-padding));
+    width: calc(100% + var(--sd-base-padding));
   }
 }
 
