--- a/src/defaultV2-theme/blocks/sd-table.scss
+++ b/src/defaultV2-theme/blocks/sd-table.scss
@@ -50,20 +50,12 @@
         padding-top: calcSize(2);
 
         .sd-table--no-header {
-          padding-top: calcSize(3);
+          padding-top: calcSize(4);
         }
       }
     }
   }
 
-  .sd-question--table {
-    &:not(.sd-element--with-frame) {
-      padding-top: calcSize(3);
-      margin-top: calcSize(-3);
-      padding-bottom: calcSize(0.25);
-      margin-bottom: calcSize(-0.25);
-    }
-  }
 
   .sd-question--table>.sd-question__content>.sd-table-wrapper .sd-table:not(.sd-table--no-header) {
     margin-top: calcSize(-3);
@@ -74,11 +66,11 @@
   }
 
   .sd-question--table>.sd-question__header+.sd-question__content>.sd-table-wrapper .sd-table:not(.sd-table--no-header) {
-    margin-top: calcSize(0);
+    margin-top: calcSize(1);
   }
 
   &>.sd-row:not(:first-child) .sd-question--table>.sd-question__header+.sd-question__content>.sd-table-wrapper .sd-table:not(.sd-table--no-header) {
-    margin-top: calcSize(0);
+    margin-top: calcSize(1);
   }
 }
 
@@ -377,9 +369,6 @@
   }
 
   &.sd-element--nested {
-    &>.sd-question__header--location-top {
-      margin-top: calc(-1 * 0.25 * var(--sd-base-vertical-padding));
-    }
 
     &>.sd-question__erbox--above-question {
       margin-bottom: var(--sd-base-vertical-padding);
@@ -388,6 +377,12 @@
     &>.sd-question__content {
       min-width: auto;
       overflow-x: auto;
+    }
+    &>.sd-question__content {
+      padding-bottom: calcSize(0.25);
+      margin-bottom: calcSize(-0.25);
+      padding-top: calcSize(1);
+      margin-top: calcSize(-1);
     }
   }
 
