fixed header lines #6717

--- a/src/defaultV2-theme/blocks/sd-element.scss
+++ b/src/defaultV2-theme/blocks/sd-element.scss
@@ -157,10 +157,11 @@
     &:after {
       content: " ";
       display: block;
-      position: relative;
+      position: absolute;
       height: 1px;
       background: $border-light;
       bottom: 0;
+      width: 100%;
     }
   }
 
@@ -171,9 +172,9 @@
       margin-top: 0;
       padding-top: var(--sd-base-vertical-padding);
       padding-bottom: var(--sd-base-vertical-padding);
+      position: relative;
 
       &:after {
-        bottom: calc(-1 * var(--sd-base-vertical-padding));
         left: calc(-1 * var(--sd-base-padding));
         width: calc(100% + 2 * var(--sd-base-padding));
       }
@@ -230,13 +231,6 @@
 
 //nested styles
 .sd-element--nested {
-  &.sd-element--complex {
-    &>.sd-element__header--location-top {
-      &:after {
-        bottom: calc(-0.5 * var(--sd-base-vertical-padding));
-      }
-    }
-  }
 
   &.sd-element--collapsed {
 
