work for #6673 add rules for buttons

--- a/src/defaultV2-theme/blocks/sd-completedpage.scss
+++ b/src/defaultV2-theme/blocks/sd-completedpage.scss
@@ -43,17 +43,23 @@
   button {
     display: flex;
     align-items: center;
-    // height: calcSize(7);
-    // line-height: calcSize(7);
     padding: calcSize(1.5) calcSize(4);
     vertical-align: baseline;
     text-align: center;
     background-color: $background;
     box-shadow: $shadow-small;
+    border: none;
     border-radius: calcSize(0.5);
     cursor: pointer;
     user-select: none;
     outline: solid calcSize(0.25) transparent;
+
+    &:hover {
+      background-color: $background-dark;
+    }
+    &:focus {
+      box-shadow: 0 0 0 2px $primary;
+    }
 
     span {
       display: flex;
@@ -66,13 +72,6 @@
       font-family: var(--font-family, $font-family);
       font-size: $font-questiontitle-size;
       line-height: multiply(1.5, $font-questiontitle-size);
-    }
-
-    .button:hover {
-      background-color: $background-dark;
-    }
-    .button:focus {
-      box-shadow: 0 0 0 2px $primary;
     }
   }
 }
