--- a/src/defaultV2-theme/blocks/sd-table.scss
+++ b/src/defaultV2-theme/blocks/sd-table.scss
@@ -57,19 +57,19 @@
   }
 
 
-  .sd-question--table>.sd-question__content>.sd-table-wrapper .sd-table:not(.sd-table--no-header) {
+  .sd-question--table>.sd-question__content .sd-table-wrapper .sd-table:not(.sd-table--no-header) {
     margin-top: calcSize(-3);
   }
 
-  &>.sd-row:not(:first-child) .sd-question--table>.sd-question__content>.sd-table-wrapper .sd-table:not(.sd-table--no-header) {
+  &>.sd-row:not(:first-child) .sd-question--table>.sd-question__content .sd-table-wrapper .sd-table:not(.sd-table--no-header) {
     margin-top: calcSize(-2);
   }
 
-  .sd-question--table>.sd-question__header+.sd-question__content>.sd-table-wrapper .sd-table:not(.sd-table--no-header) {
+  .sd-question--table>.sd-question__header+.sd-question__content .sd-table-wrapper .sd-table:not(.sd-table--no-header) {
     margin-top: calcSize(1);
   }
 
-  &>.sd-row:not(:first-child) .sd-question--table>.sd-question__header+.sd-question__content>.sd-table-wrapper .sd-table:not(.sd-table--no-header) {
+  &>.sd-row:not(:first-child) .sd-question--table>.sd-question__header+.sd-question__content .sd-table-wrapper .sd-table:not(.sd-table--no-header) {
     margin-top: calcSize(1);
   }
 }
