work for the https://github.com/surveyjs/survey-library/issues/6810

--- a/src/defaultV2-theme/blocks/sd-file.scss
+++ b/src/defaultV2-theme/blocks/sd-file.scss
@@ -67,7 +67,8 @@
 }
 
 .sd-file__choose-btn--text {
-  display: block;
+  display: flex;
+  flex-direction: column;
   margin-top: calcSize(1);
   font-weight: 600;
   color: $primary;
