--- a/src/defaultV2-theme/blocks/sd-completedpage.scss
+++ b/src/defaultV2-theme/blocks/sd-completedpage.scss
@@ -5,8 +5,74 @@
   text-align: center;
   height: auto;
 
+  // h3 {
+  //   font-size: calcFontSize(1.5);
+  // }
+
+  h1 {
+    @include articleXXLargeFont;
+  }
+
+  h2 {
+    @include articleXLargeFont;
+  }
+
   h3 {
-    font-size: calcFontSize(1.5);
+    @include articleLargeFont;
+  }
+
+  h4 {
+    @include articleMediumFont;
+  }
+
+  h5,
+  h6 {
+    color: $foreground;
+  }
+
+  span,
+  div,
+  p {
+    @include articleDefaultFont;
+  }
+
+  a {
+    color: $primary;
+  }
+
+  button {
+    display: flex;
+    align-items: center;
+    padding: calcSize(1.5) calcSize(4);
+    vertical-align: baseline;
+    text-align: center;
+    background-color: $background;
+    box-shadow: $shadow-small;
+    border: none;
+    border-radius: calcSize(0.5);
+    cursor: pointer;
+    user-select: none;
+    outline: solid calcSize(0.25) transparent;
+
+    &:hover {
+      background-color: $background-dark;
+    }
+    &:focus {
+      box-shadow: 0 0 0 2px $primary;
+    }
+
+    span {
+      display: flex;
+      align-items: center;
+      flex-grow: 1;
+      justify-content: center;
+      color: $primary;
+      font-weight: 600;
+      font-style: normal;
+      font-family: var(--font-family, $font-family);
+      font-size: $font-questiontitle-size;
+      line-height: multiply(1.5, $font-questiontitle-size);
+    }
   }
 }
 
