--- a/src/defaultV2-theme/blocks/sd-multipletext.scss
+++ b/src/defaultV2-theme/blocks/sd-multipletext.scss
@@ -1,25 +1,31 @@
 @import "../variables.scss";
+
 .sd-multipletext {
   width: 100%;
   table-layout: fixed;
   border-spacing: 0;
   height: 1px;
 }
+
 .sd-multipletext__cell {
   height: 100%;
 }
-.sd-multipletext__cell:not(:last-child) {
-  padding-right: calcSize(2);
+
+.sd-multipletext__cell:not(:first-of-type) {
+  padding-left: calcSize(2);
 }
+
 .sd-multipletext__item-container.sd-input:focus-within {
   box-shadow: 0 0 0 2px $primary;
 }
+
 .sd-multipletext__item-container {
   display: flex;
   align-items: flex-start;
   height: 100%;
   padding-top: 0;
   padding-bottom: 0;
+
   .sd-input {
     padding-top: 0;
     padding-right: 0;
@@ -28,11 +34,23 @@
     box-shadow: none;
   }
 }
+
 .sd-multipletext__item-container .sd-input,
 .sd-multipletext__item-title {
   margin-top: calcSize(1.5);
   margin-bottom: calcSize(1.5);
 }
+
+.sd-multipletext__item-title {
+  font-size: 0;
+  line-height: 0;
+
+  span {
+    font-size: $font-editorfont-size;
+    line-height: multiply(1.5, $font-editorfont-size);
+  }
+}
+
 .sd-multipletext__item-title {
   height: calc(100% - #{$base-unit} * 3);
   max-width: 30%;
@@ -42,24 +60,51 @@
   white-space: normal;
   color: $foreground-light;
 }
+
 .sd-multipletext__item {
   flex-grow: 1;
 }
+
 .sd-multipletext__content .sd-multipletext__item-container {
   position: relative;
 }
+
 .sd-multipletext__item-container--error {
   background-color: $red-light;
+
   .sd-input--error {
     background-color: transparent;
   }
 }
-.sd-multipletext__item-container:hover:not(:focus-within) > .sd-question__erbox--tooltip {
+
+.sd-multipletext__item-container:hover:not(:focus-within)>.sd-question__erbox--tooltip {
   display: inline-block;
 }
-.sd-multipletext tr:not(:last-child) .sd-multipletext__cell {
-  padding-bottom: calcSize(2);
+
+.sd-multipletext__cell {
+  padding-bottom: calcSize(1);
 }
+
+.sd-multipletext__cell {
+  padding-top: calcSize(1);
+}
+
+.sd-multipletext__cell--error-bottom,
+.sd-multipletext__row:first-of-type .sd-multipletext__cell {
+  padding-top: 0;
+}
+
+.sd-multipletext__cell--error-top,
+.sd-multipletext__row:last-of-type .sd-multipletext__cell {
+  padding-bottom: 0;
+}
+
+.sd-multipletext__cell--error {
+  .sd-question__erbox--outside-question {
+    margin: 0;
+  }
+}
+
 .sd-multipletext .sd-input .sd-input {
   background: transparent;
 }
