#6799 Change design for questions in one row - different sizes Fixes #6799

--- a/src/defaultV2-theme/blocks/sd-row.scss
+++ b/src/defaultV2-theme/blocks/sd-row.scss
@@ -66,10 +66,12 @@
 .sd-row__panel {
   box-sizing: border-box;
   width: 100%;
+  height: 100%
 }
 
 .sd-row__question {
   box-sizing: border-box;
   width: 100%;
   white-space: nowrap;
+  height: 100%
 }
