--- a/src/knockout/templates/index.html
+++ b/src/knockout/templates/index.html
@@ -5,10 +5,13 @@
 
 <script type="text/html" id="survey-content-template">
   <div data-bind="css: rootCss, elementStyle: themeVariables">
-      <!-- ko if: !!renderBackgroundImage -->
-      <div data-bind="css: css.rootBackgroundImage, style: backgroundImageStyle"></div>
+      <!-- ko if: !!renderBackgroundImage && $data.backgroundImageFixed -->
+      <div data-bind="css: backgroundImageCss, style: backgroundImageStyle"></div>
       <!-- /ko -->
-      <form onsubmit="return false;">
+      <form data-bind="css: formCss" onsubmit="return false;">
+          <!-- ko if: !!renderBackgroundImage && !$data.backgroundImageFixed -->
+          <div data-bind="css: backgroundImageCss, style: backgroundImageStyle"></div>
+          <!-- /ko -->
           <div class="sv_custom_header" data-bind="visible: !hasLogo"></div>
           <div data-bind="css: containerCss">
               <!-- ko template: { name: koTitleTemplate, afterRender: koAfterRenderHeader } -->
